force-app/main/default/objects/ByPassLogic__c/ByPassLogic__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Created to control flow, trigger and validation rule execution for a user or profile per object</description>
    <label>By Pass Logic</label>
</CustomObject>