force-app/main/default/objects/ByPassLogic__c/fields/ByPassApprovalProcess__c.field-meta.xml
<CustomField>
    <fullName>ByPassApprovalProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>By Pass Approval Process</label>
    <type>Checkbox</type>
</CustomField>