force-app/main/default/objects/ByPassLogic__c/fields/ByPassFlow__c.field-meta.xml
<CustomField>
    <fullName>ByPassFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>By Pass Flow</label>
    <type>Checkbox</type>
</CustomField>