force-app/main/default/objects/ByPassLogic__c/fields/ByPassTrigger__c.field-meta.xml
<CustomField>
    <fullName>ByPassTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>By Pass Trigger</label>
    <type>Checkbox</type>
</CustomField>