force-app/main/default/objects/ByPassLogic__c/listViews/ByPassLogic.listView-meta.xml
<ListView>
    <fullName>ByPassLogic</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>NAME</columns>
    <columns>ByPassApprovalProcess__c</columns>
    <columns>ByPassFlow__c</columns>
    <columns>ByPassTrigger__c</columns>
    <columns>ByPassValidation__c</columns>
    <filterScope>Everything</filterScope>
    <label>By Pass Logic</label>
    <language>en_US</language>
</ListView>